syntax = "proto3";

option java_multiple_files = true;

package es.codeurjc.mastercloudapps.p3.uppertask;

message UpperCaseTaskRequest {
    string text = 1;
}

message UpperCaseTaskResponse {
    string result = 1;
}

service UpperCaseService {
    rpc toUpperCase(UpperCaseTaskRequest) returns (UpperCaseTaskResponse);
}
